# BunproNotifier

./: Cargo.toml  README.md  build.rs
src/: config.rs  event_loop.rs  main.rs  notification.rs  objects.rs  parker.rs  popup.rs  req.rs  run.rs  setup.rs  tray.rs
src/run/: daily.rs  hourly.rs
