[package]
name = "bunpro-notifier"
version = "0.1.0"
edition = "2024"
authors = ["Cherry"]
license = "MIT"
homepage = "https://github.com/MolotovCherry/BunproNotifier"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
snafu = "0.8.9"
const_format = "0.2.35"
jiff = { version = "0.2.21", features = ["serde"] }
ureq = { version = "3.2.0", features = ["json"] }
ron = "0.12.0"
include_dir = "0.7.4"
sayuri = "0.1.4"
directories = "6.0.0"
crossbeam = "0.8.4"
log = "0.4.29"
env_logger = "0.11.9"
tray-icon = "0.21.3"
winit = "0.30.12"
open = "5.3.3"
notify-debouncer-full = "0.7.0"

[target.'cfg(windows)'.dependencies]
winreg = "0.55.0"
tauri-winrt-notification = "0.7.2"

[target.'cfg(not(windows))'.dependencies]
notify-rust = "4.12.0"

[target.'cfg(windows)'.dependencies.windows]
version = "0.62.2"
features = [
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging"
]

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.12"

[build-dependencies]
image = "0.25.9"
